Add enhanced welcome wizard with comprehensive onboarding
- Created interactive multi-step welcome wizard for first-time users
- Added feature overview showing Web3, wallet, AI assistant, and password manager
- Included coming soon features: EBTV (Q2 2025), EBWIKI (Q3 2025), VR World Builder (Q4 2025)
- Added business owner registration flow with redirect to submission page
- Implemented wallet setup with secure mnemonic generation and display
- Added AI assistant explanation highlighting free unlimited usage
- Enabled VR World Builder and EB Wiki buttons in sidebar with coming soon status
- Auto-detection of first-time vs returning users via localStorage
- Beautiful particle animation background for engaging experience
- Progress indicator showing wizard steps
- Skip options for business registration and wallet setup

--- a/sidebar-config.json
+++ b/sidebar-config.json
@@ -66,6 +66,24 @@
       "url": "https://pass.everythingblack.xyz"
     },
     {
+      "id": "vr",
+      "enabled": true,
+      "text": "VR World Builder",
+      "icon": "fas fa-vr-cardboard",
+      "action": "maintenance",
+      "maintenanceMessage": "VR World Builder - Coming Soon!",
+      "maintenanceSubMessage": "Build and explore virtual worlds. Launching Q4 2025."
+    },
+    {
+      "id": "wiki",
+      "enabled": true,
+      "text": "EB Wiki",
+      "icon": "fas fa-book",
+      "action": "maintenance",
+      "maintenanceMessage": "EB Wiki - Coming Soon!",
+      "maintenanceSubMessage": "Community-driven knowledge base. Launching Q3 2025."
+    },
+    {
       "id": "resources",
       "enabled": false,
       "text": "Resources",
